Add Spotless and SpotBugs plugins; fix all SpotBugs issues; update dependencies
Build plugins:

- Add Spotless Maven plugin with Google Java Format

- Add SpotBugs Maven plugin for static analysis

- Add spotbugs-annotations dependency for suppressions

Dependency updates:

- groovy 5.0.4 -> 5.0.5

- maven-shade-plugin 3.6.0 -> 3.6.2

- asm 9.8 -> 9.9.1

- gradle-tooling-api 9.4.0 -> 9.4.1

- spotless-maven-plugin 2.44.3 -> 3.4.0

- spotbugs-maven-plugin 4.9.3.0 -> 4.9.8.3

SpotBugs fixes:

- SymbolInfo/CompletionItem: defensive copying of mutable collections

- CoreServer: remove unused variable

- JdkIndex: close DirectoryStream resources

- MavenBuildPlugin: add null checks

- GroovyPlugin: fix null handling and redundant checks

- JvmPlsLanguageServer: make class final